[package]
name = "proxy-rs"
version = "0.1.0"
edition = "2021"
description = "A simple proxy config tool."
repository = "https://github.com/pplmx/proxy-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
