[package]
name = "proxy-x"
version = "0.2.2"
edition = "2021"
description = "A simple proxy config tool."
authors = ["Mystic"]
repository = "https://github.com/pplmx/proxy-x"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.27", features = ["cargo", "derive"] }

[dev-dependencies]
husky-rs = "^0.1.1"
